fix: scrollbar playlist

--- a/css/style.css
+++ b/css/style.css
@@ -227,29 +227,32 @@ footer {
 
     /* RESPONSIVE NAVBAR (HOME, LIBRARY, SEARCH) */
     .nav-bar {
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        border: 2px dashed green;
+
     }
     .nav-bar .nav-icons {
         display: flex;
         align-items: center;
         padding: 0 10px;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
     }
     .nav-icons:hover {
         border-left: 3px solid #adff2f;
     }
     .nav-bar .nav-icons img {
-        width: 40px;
+        width: 35px;
     }
     .name-icon {
         display: inline-block;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 800;
         height: 100%;
         line-height: 40px;
-        padding-left: 15px;
+        padding-left: 10px;
     }
     .name-icon:hover  {
         color: #fff;
@@ -257,16 +260,22 @@ footer {
 
     /* RESPONSIVE PLAYLIST */
     .nav-playlist {
+        width: 100%;
         display: flex;
         flex-direction: column;
+        flex-grow: 1;
         color: #fff;
         padding-left: 15px;
         margin: 30px 0;
+        border: 2px dashed green;
+
     }
     .create-playlist {
         display: flex;
         align-items: center;
         font-size: 20px;
+        margin-bottom: 15px;
+
     }
     .nav-playlist h2 {
         text-transform: uppercase;
@@ -277,9 +286,15 @@ footer {
         list-style: none;
         line-height: 2.5;
         font-weight: 900;
+        overflow-y: auto;
+        height: 300px;
+    }
+    .nav-playlist ul::-webkit-scrollbar {
+        /* display: none; */
     }
     .nav-playlist ul li {
         color: #707070;
+        
     }
     .nav-playlist .plus-icon{
         display: inline-block;
@@ -303,6 +318,7 @@ footer {
         position: sticky;
         bottom: 0;
         left: 0;
+        border: 2px dashed green;
     }
     .profile,
     .download {
